<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#148C46"
    android:orientation="vertical"
    tools:context=".fragment.FirstFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textSize="15sp"
        android:layout_gravity="end"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="21dp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="50sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:text="@string/less_talk"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:text="@string/eat_more"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:text="@string/delivery_solution_in_phone"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/get_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/get_started"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/burger_1"
        android:contentDescription="@string/burger_pic"
        android:scaleType="fitXY"
        />



</LinearLayout>