<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".fragment.RegistractionFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="170dp"
                android:layout_marginEnd="183dp"
                android:contentDescription="@string/welcome_user1"
                android:text="@string/welcome_user"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/please_enter_your_detail"
                android:textColor="#1F1F1F" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="100dp"

                android:layout_marginEnd="20dp"
                android:autofillHints="phone"
                android:background="@drawable/edit_text"
                android:backgroundTint="#E6E4E4"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:paddingStart="46dp" />


            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="phone"
                android:background="@drawable/edit_text"
                android:backgroundTint="#E6E4E4"
                android:hint="@string/password"
                android:inputType="number"
                android:paddingStart="46dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="phone"
                android:background="@drawable/edit_text"
                android:backgroundTint="#E6E4E4"
                android:hint="@string/confirm_password"
                android:inputType="number"
                android:paddingStart="46dp" />

            <Button
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button"
                android:text="@string/sign_up"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="#148C46" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="59dp"
                android:text="@string/continue_with_social_media"
                android:textColor="#1F1F1F"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="150dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/google"
                    android:gravity="center_horizontal"
                    android:src="@drawable/google__1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/facebook"
                    android:gravity="center"
                    android:src="@drawable/facebook_1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/apple"
                    android:gravity="center"
                    android:src="@drawable/apple" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:text="@string/already_have_aaccount_login"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>