<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.OtpFragment">


    <TextView
        android:layout_width="127dp"
        android:layout_height="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="157dp"
        android:autoSizeTextType="uniform"
        android:text="@string/otp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/code"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="72dp"
        android:text="@string/sent_code" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="72dp"
        android:orientation="horizontal">

        <EditText
            android:layout_width="42dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="@string/One"
            android:autofillHints="phone"
            android:background="@drawable/edit_text_otp"
            android:backgroundTint="#DCCFCF" />

        <EditText
            android:layout_width="42dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/two"
            android:autofillHints="phone"
            android:inputType="number"
            android:background="@drawable/edit_text_otp"
            android:backgroundTint="#DCCFCF" />

        <EditText
            android:layout_width="42dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="number"
            android:hint="@string/three"
            android:autofillHints="phone"
            android:background="@drawable/edit_text_otp"
            android:backgroundTint="#DCCFCF" />

        <EditText
            android:layout_width="42dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="number"
            android:hint="@string/four"
            android:autofillHints="phone"
            android:background="@drawable/edit_text_otp"
            android:backgroundTint="#DCCFCF" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="23dp"
        android:text="@string/send_again"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_countinue"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button"
        android:text="Continue"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold" />


</LinearLayout>